<resources>
    <string name="app_name" translatable="false">SmartAlert</string>
    <string name="usernameTS">"Email: "</string>
    <string name="passwordTS">Password: </string>
    <string name="loginBtn">Sign In</string>
    <string name="registerBtn">Register: </string>
    <string name="fullnameTV">Full Name:</string>
    <string name="logoutBtn">Sign Out</string>
    <string name="seperatorTV">— OR —</string>
    <string name="signingOut">Signing out</string>
    <string name="areYouSure">Are you sure?</string>
    <string name="exitingFromApp">Exiting the app</string>

    <string name="flood">Flood</string>
    <string name="fire">Fire</string>
    <string name="earthquake">Earthquake</string>
    <string name="otherNaturalDisaster">Other Natural Disaster</string>

    <string name="submitAlert">Sumbit New Alert</string>
    <string name="titleOfAlert">Alert Title</string>
    <string name="timestampTV">Timestamp:</string>
    <string name="locationTV">Location:</string>
    <string name="waitToGetGps">waiting to get location...</string>
    <string name="alertDescriptioET">Describe the alert</string>
    <string name="alertCategoryTV">Category:</string>
    <string name="submitAlertBtn">Submit</string>


</resources>